<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewGps"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="es.ubu.alu.jzm0008.gestordesonidoparadispositivosandroid.fragments.GpsFragment">

    <EditText
        android:id="@+id/eventGPSNameEditText"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="100dp"
        android:hint="@string/nombre_gps" />

    <TextView
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="200dp"
        android:text="@string/selecciona_perfil"/>

    <Spinner
        android:id="@+id/gpsSpinner"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="250dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/gpsButton"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="400dp"
        android:text="@string/guarda_evento" />

</FrameLayout>
</ScrollView>