<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewWifi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.ubu.alu.jzm0008.gestordesonidoparadispositivosandroid.fragments.WifiFragment">


    <EditText
        android:id="@+id/eventWifiNameEditText"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="100dp"
        android:hint="@string/nombre_wifi" />

    <EditText
        android:id="@+id/wiffiEditText"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="200dp"
        android:hint="@string/red_wifi" />

    <Spinner
        android:id="@+id/wiffiSpinner"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="300dp"/>

    <Button
        android:id="@+id/wiffiButton"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="400dp"
        android:text="@string/guarda_evento" />

</FrameLayout>
</ScrollView>