<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewCalendar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.ubu.alu.jzm0008.gestordesonidoparadispositivosandroid.fragments.CalendarFragment">

    <EditText
        android:id="@+id/eventCalendarNameEditText"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="100dp"
        android:hint="@string/nombre_calendario" />


    <EditText
        android:id="@+id/calendarEditText"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="200dp"
        android:hint="@string/clave_calendario" />

    <Spinner
        android:id="@+id/calendarSpinner"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="300dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/calendarButton"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="400dp"
        android:text="@string/guarda_evento" />

</FrameLayout>
</ScrollView>